-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.4.1, Lustre 2.6.0
-
None
-
3
-
13035
I have been seeing this a few times recently. It doesn't seem to be particularly critical but I don't think this file exists on the filesystem.
Mar 10 10:29:37 cmds1 kernel: Lustre: 35876:0:(mdd_device.c:563:obf_lookup()) charlie-MDD0000: bad FID format [.fungus_skip], should be [0x200000400:0x1:0x0] Mar 10 10:38:03 cmds1 kernel: Lustre: 35876:0:(mdd_device.c:563:obf_lookup()) charlie-MDD0000: bad FID format [.fungus_skip], should be [0x200000400:0x1:0x0] Mar 10 10:49:20 cmds1 kernel: Lustre: 5100:0:(mdd_device.c:563:obf_lookup()) charlie-MDD0000: bad FID format [.fungus_skip], should be [0x200000400:0x1:0x0] Mar 10 10:59:45 cmds1 kernel: Lustre: 35652:0:(mdd_device.c:563:obf_lookup()) charlie-MDD0000: bad FID format [.fungus_skip], should be [0x200000400:0x1:0x0] Mar 10 11:09:45 cmds1 kernel: Lustre: 35652:0:(mdd_device.c:563:obf_lookup()) charlie-MDD0000: bad FID format [.fungus_skip], should be [0x200000400:0x1:0x0] Mar 10 11:21:01 cmds1 kernel: Lustre: 5100:0:(mdd_device.c:563:obf_lookup()) charlie-MDD0000: bad FID format [.fungus_skip], should be [0x200000400:0x1:0x0]
The ".fungus_skip" file is just a blank file that our filesystem trawler tries to write to dirs we know we don't need to scan (OLD/ARCHIVE etc). We do not see this message on a similar (same version) filesystem. The only thing that I think may have happened to this filesystem is that the mds-survey benchmark was aborted halfway through and left some "test" dirs that had to be manually deleted by mounting with ldiskfs. I'm not sure if this has messed up the FIDs.