LU-4742 mdd: improve error messages in obf_lookup()

To make user able to understand that's just an invalid operation
in .lustre/fid, but not a serious error.

Signed-off-by: Niu Yawei <yawei.niu@intel.com>
Change-Id: I928cdf61ae6a70c0ff5bbe1133338c54cd997aa2
Reviewed-on: http://review.whamcloud.com/9594
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Lai Siyao <lai.siyao@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>